welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: too many arguments for method droite: ()Unit
droite(2)
      ^Balin:8: error: too many arguments for method gauche: ()Unit
gauche(2)
      ^Balin:14: error: too many arguments for method poseBiscuit: ()Unit
poseBiscuit(1)
           ^Balin:16: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^Balin:18: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^