welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (estFaceMur()){
droite(2)
while (estSurBiscuit()==false) {
	avance()

}
prendBiscuit()
gauche(2)
while (estSurBiscuit()==false) {
	avance()

}
recule(1)
poseBiscuit(1)
}
gauche(1)
avance(1)
gauche(1)
avance(1)

